<resources>
    <string name="app_name">易橙学堂</string>
    <string name="xy">请阅读并勾选下方协议</string>
    <string name="phone_login">手机号码登录</string>
    <string name="i_read">我已阅读并同意</string>
    <string name="todo">TODO</string>
    <string name="service_xy">《服务协议》</string>
    <string name="and">和</string>
    <string name="other_login">其他登录方式</string>
    <string name="login_register">验证码登录/注册</string>
    <string name="login_tips">未注册的手机号验证通过后将自动注册</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_vc_code">请输入验证码</string>
    <string name="get_vc_vode">获取验证码</string>
    <string name="login">登录</string>
    <string name="use_password">使用密码登录</string>
    <string name="input_correct_phone">请输入正确的手机号</string>
    <string name="password_login_text">密码登录</string>
    <string name="input_password">请输入密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="alreday_registered">密码登录仅适用于已注册的用户</string>
    <string name="reset_password">重置密码</string>
    <string name="change_password_tips">重置成功后，原密码将即时失效</string>
    <string name="next_step">下一步</string>
    <string name="make_sure">确定</string>
    <string name="login_failed">登陆失败</string>
    <string name="binding_wechat">绑定微信</string>
    <string name="binding_wecaht_tips">绑定微信，后续所有信息将围绕该账号所开展</string>
    <string name="bind_now">立即绑定</string>
    <string name="binding_wechat_tips2">如退出流程，则代表注册流程失败，请谨慎操作</string>
    <string name="password_rule">密码需大于8位字母或数字</string>
    <string name="vccode_rule">验证码错误</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="experience_class">体验课</string>
    <string name="advanced_course">进阶课</string>
    <string name="live_course">直播课</string>
    <string name="come_in">进入</string>
    <string name="no_lesson_tips">您还没有购买课程，购买后可以开始学习</string>
    <string name="sign_the_contract">签署合同</string>
    <string name="fill_in_address">填写收货地址</string>
    <string name="select_time">选择开课时间</string>
    <string name="sign_contract_tips">签署合同后才可以开始上课</string>
    <string name="fill_in_address_tips">请填写您的收货地址</string>
    <string name="select_appropriate_time">请选择合适的开课时间</string>
    <string name="now_sign">去签署</string>
    <string name="now_fill_in">去填写</string>
    <string name="now_select">去选择</string>
    <string name="title_contract">课程服务合同</string>
    <string name="party_a">甲方：</string>
    <string name="title_address">通讯地址:</string>
    <string name="party_b">乙方</string>
    <string name="party_b_id">身份证号</string>
    <string name="phone">联系电话</string>
    <string name="commit_success">提交成功</string>
    <string name="no_address">为了您能够及时收到教材，不影响学习进度，请务必补充正确的地址信息。因个人填写失误导致的后续问题，本公司概不负责。</string>
    <string name="receiving_address">收货地址</string>
    <string name="no_address_tips">暂无地址</string>
    <string name="use_other_address">使用其他地址</string>
    <string name="delete">删除</string>
    <string name="receiver">收货人</string>
    <string name="receiver_name">请填写收货人姓名</string>
    <string name="phone_number">手机号码</string>
    <string name="area">所在区域</string>
    <string name="input_receiver_number">请填写收货人手机号</string>
    <string name="area_des">省市区县、乡镇等</string>
    <string name="detail_address">详细地址</string>
    <string name="address_des">街道、楼牌号等</string>
    <string name="set_default_address">设为默认地址</string>
    <string name="set_default_tips">提醒：快递会优先使用该地址</string>
    <string name="keep_and_use">保存并使用</string>
    <string name="fill_complete">请填写完整信息</string>
    <string name="create_address">新建收货地址</string>
    <string name="start_time">开课时间</string>
    <string name="full_already">已满</string>
    <string name="success_course">课程激活成功</string>
    <string name="add_teacher_tips">添加老师微信</string>
    <string name="add_teacher_tips2">请务必添加老师微信，否则无法上课</string>
    <string name="add_wx">添加微信</string>
    <string name="unclock_progress">解锁进度</string>
    <string name="start_time1">开课时间：</string>
    <string name="start_time_tips">开课前三天，公众号会推送班主任微信，为不影响您的学习进度，请您及时添加！</string>
    <string name="add_teacher">添加老师微信</string>
    <string name="add_teacher_must_tips">请务必添加老师微信，否则无法上课</string>
    <string name="add_teacher_wx">添加老师</string>
    <string name="course_arrange">课程安排</string>
    <string name="music_list">播放列表</string>
    <string name="half_speed">0.5X</string>
    <string name="one_speed">1.0X</string>
    <string name="one_half_speed">1.5X</string>
    <string name="double_speed">2.0X</string>
    <string name="take_note">记笔记</string>
    <string name="keep_note">保存</string>
    <string name="note_tips">快来记录你的学习想法吧</string>
    <string name="learning_center">练习中心</string>
    <string name="order_exercise">顺序练习</string>
    <string name="test_quiestion">试题模拟</string>
    <string name="wrong_book">错题本</string>
    <string name="exercise_record">练习记录</string>
    <string name="favorites">收藏夹</string>
    <string name="ranking_list">排行榜</string>
    <string name="test_exercise">试题模拟</string>
    <string name="skzs">上课助手</string>


</resources>