<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.logins.BindingWechatActivity">

    <TextView
        android:id="@+id/tv_binding_wechat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/binding_wechat"
        android:textColor="#ff212121"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/tv_binding_wechat_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_binding_wechat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_4"
        android:text="@string/binding_wecaht_tips"
        android:textColor="#ff9e9e9e"
        android:textSize="13sp" />

    <ImageView
        android:id="@+id/iv_binding_wechat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_binding_wechat_tips"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:src="@mipmap/binding_wecaht" />

    <TextView
        android:id="@+id/tv_bind_now"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/iv_binding_wechat"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="29dp"
        android:background="@drawable/login_phone_shape"
        android:gravity="center"
        android:text="@string/bind_now"
        android:textColor="#ffffffff"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_bind_now"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/binding_wechat_tips2"
        android:textColor="#fffe8000"
        android:textSize="12sp" />
</RelativeLayout>