<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.logins.VcLoginActivity">

    <RelativeLayout
        android:id="@+id/rl_out"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="21dp">

        <ImageView
            android:id="@+id/left_out"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/todo"
            android:src="@mipmap/left_out" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_out"
        android:layout_marginStart="27dp"
        android:layout_marginTop="37dp"
        android:text="@string/login_register"
        android:textColor="#ff212121"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/tv_login_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_login_register"
        android:layout_marginStart="27dp"
        android:layout_marginTop="3dp"
        android:text="@string/login_tips"
        android:textColor="#ff9e9e9e"
        android:textSize="13sp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/ed_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_login_tips"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="21dp"
        android:layout_marginRight="34dp"
        android:hint="@string/input_phone"
        android:inputType="phone"
        android:paddingStart="@dimen/dp_10"
        android:paddingBottom="11dp"
        app:met_floatingLabelTextSize="17sp"
        app:met_hideUnderline="true"
        app:met_underlineColor="#E0E0E0" />

    <View
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/ed_phone"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        android:background="#E0E0E0" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/ed_vc_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_phone"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="21dp"
        android:layout_marginRight="34dp"
        android:hint="@string/input_vc_code"
        android:inputType="phone"
        android:paddingStart="@dimen/dp_10"
        android:paddingBottom="11dp"
        app:met_floatingLabelTextSize="17sp"
        app:met_hideUnderline="true"
        app:met_underlineColor="#E0E0E0" />

    <View
        android:id="@+id/v2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/ed_vc_code"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        android:background="#E0E0E0" />

    <ImageView
        android:id="@+id/iv_fork"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_below="@id/ed_phone"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="36dp"
        android:layout_toStartOf="@id/tv_get_vc_code"
        android:src="@mipmap/fork"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_get_vc_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_phone"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="45dp"
        android:text="@string/get_vc_vode"
        android:textColor="#ffc7c7c7"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_login_sure"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/ed_vc_code"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="29dp"
        android:background="@drawable/unlogin_shape"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#ffffffff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_use_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_login_sure"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/use_password"
        android:textColor="#fffe8000"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_use_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:visibility="invisible">

        <CheckBox
            android:id="@+id/check"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_below="@id/tv_phone_login"
            android:layout_marginStart="30dp"
            android:layout_marginTop="49dp"
            android:background="@drawable/unchecked"
            android:button="@null"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv_i_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_phone_login"
            android:layout_marginStart="5dp"
            android:layout_marginTop="47dp"
            android:layout_toEndOf="@id/check"
            android:gravity="center"
            android:text="@string/i_read"
            android:textColor="#ff898989"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_service_xy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_phone_login"
            android:layout_marginStart="2dp"
            android:layout_marginTop="47dp"
            android:layout_toEndOf="@id/tv_i_read"
            android:text="@string/service_xy"
            android:textColor="#FE8000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_and"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_phone_login"
            android:layout_marginTop="47dp"
            android:layout_toEndOf="@id/tv_service_xy"
            android:text="@string/and"
            android:textColor="#ff898989"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_privacy_xy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_phone_login"
            android:layout_marginStart="2dp"
            android:layout_marginTop="47dp"
            android:layout_marginEnd="30dp"
            android:layout_toEndOf="@id/tv_and"
            android:text="@string/service_xy"
            android:textColor="#FE8000"
            android:textSize="12sp" />
    </LinearLayout>


    <View
        android:id="@+id/view_left"
        android:layout_width="62dp"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="93dp"
        android:background="#E1E1E1" />

    <View
        android:id="@+id/view_right"
        android:layout_width="62dp"
        android:layout_height="1dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="93dp"
        android:background="#E1E1E1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="85dp"
        android:gravity="center"
        android:text="@string/other_login"
        android:textColor="#ff212121"
        android:textSize="13sp" />

    <ImageView
        android:id="@+id/iv_wx_login"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:contentDescription="@string/todo"
        android:src="@mipmap/wxlogin" />
</RelativeLayout>