<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.logins.PasswordLoginLoActivity">

    <RelativeLayout
        android:id="@+id/rl_out"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="21dp">

        <ImageView
            android:id="@+id/left_out"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/todo"
            android:src="@mipmap/left_out" />

    </RelativeLayout>


    <TextView
        android:id="@+id/tv_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_out"
        android:layout_marginStart="27dp"
        android:layout_marginTop="37dp"
        android:text="@string/password_login_text"
        android:textColor="#ff212121"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/tv_login_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_login_register"
        android:layout_marginStart="27dp"
        android:layout_marginTop="3dp"
        android:text="@string/alreday_registered"
        android:textColor="#ff9e9e9e"
        android:textSize="13sp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/ed_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_login_tips"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="21dp"
        android:layout_marginRight="34dp"
        android:hint="@string/input_phone"
        android:inputType="phone"
        android:paddingStart="@dimen/dp_10"
        android:paddingBottom="11dp"
        app:met_floatingLabelTextSize="17sp"
        app:met_hideUnderline="true"
        app:met_underlineColor="#E0E0E0" />

    <View
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/ed_phone"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        android:background="#E0E0E0" />


    <com.rengwuxian.materialedittext.MaterialEditText
        app:met_hideUnderline="true"
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_phone"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="21dp"
        android:layout_marginRight="34dp"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/dp_10"
        android:paddingBottom="11dp"
        app:met_floatingLabelTextSize="17sp"
        app:met_underlineColor="#E0E0E0" />

    <View
        android:id="@+id/v2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/ed_password"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        android:background="#E0E0E0" />


    <ImageView
        android:id="@+id/iv_see"
        android:layout_width="21dp"
        android:layout_height="15dp"
        android:layout_below="@id/ed_phone"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="41dp"
        android:src="@mipmap/see_password" />

    <TextView
        android:id="@+id/tv_login_sure"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/ed_password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="29dp"
        android:background="@drawable/unlogin_shape"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#ffffffff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_vclogin_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_login_sure"
        android:layout_marginStart="38dp"
        android:layout_marginTop="16dp"
        android:text="@string/login_register"
        android:textColor="#fffe8000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_login_sure"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="38dp"
        android:text="@string/forget_password"
        android:textColor="#fffe8000"
        android:textSize="14sp" />

    <View
        android:id="@+id/view_left"
        android:layout_width="62dp"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="93dp"
        android:background="#E1E1E1" />

    <View
        android:id="@+id/view_right"
        android:layout_width="62dp"
        android:layout_height="1dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="93dp"
        android:background="#E1E1E1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="85dp"
        android:gravity="center"
        android:text="@string/other_login"
        android:textColor="#ff212121"
        android:textSize="13sp" />

    <ImageView
        android:id="@+id/iv_wx_login"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:contentDescription="@string/todo"
        android:src="@mipmap/wxlogin" />

</RelativeLayout>